# Tlex

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  roadmap.md  structure.md  tlex-release.jks  todo.md
.github/workflows/: android-release.yml
android-tv/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android-tv/app/: build.gradle.kts  proguard-rules.pro
android-tv/app/release/: output-metadata.json
app/: __init__.py  _version.py  config.py  database.py  main.py
app/api/: deps.py
app/api/v1/: __init__.py  auth.py  backup.py  device_auth.py  media.py  people.py  profiles.py  progress.py  scanner.py  seasons.py  series.py  stream.py  subtitles.py  watchlist.py  workers.py
app/core/: __init__.py  exceptions.py  logging.py  metrics.py  rate_limit.py  security.py  utils.py  worker_manager.py
app/models/: __init__.py  backup.py  media.py  user.py  worker.py
app/schemas/: __init__.py  auth.py  media.py  profile.py  scanner.py  watchlist.py
app/services/: __init__.py  ffmpeg.py  ffprobe.py  mkv_cues.py  overrides.py  scheduler.py
docs/: cloudflare-setup.md  frontend-design.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/messages/: en.json  it.json
frontend/public/: manifest.json
logo/: tlex.ai
scripts/: add_worker.py  benchmark_workers.py  check_duration.py  compare_keyframes.py  create_tables.py  debug_keyframe.py  init-db.sh  list_chats.py  make_admin.py  migrate_backup.py  migrate_extra_sessions.py  migrate_media_content_rating.py  migrate_profiles.py  migrate_refresh_tokens.py  migrate_season_posters.py  migrate_series_metadata.py  migrate_watchlist.py  reset_workers.py  split_file.py  test_download.py  test_seek.py
tests/: __init__.py  conftest.py  test_auth.py  test_media.py  test_watchlist.py
(+185 files in other folders)
