[project]
name = "tlex"
version = "0.1.0"
description = "Telegram Media Server - Self-hosted streaming platform using Telegram as storage backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Redis
    "redis>=5.0.1",
    # Telegram
    "pyrogram>=2.0.106",
    "tgcrypto>=1.2.5",
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    # Metadata & Parsing
    "httpx>=0.26.0",
    "guessit>=3.8.0",
    # Configuration
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    # Logging
    "loguru>=0.7.2",
    "psycopg2-binary>=2.9.11",
    "email-validator>=2.3.0",
    "bcrypt==4.0.1",
    "fonttools>=4.61.1",
    "slowapi>=0.1.9",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.14",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.26.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
